--- a/gradle.properties
+++ b/gradle.properties
@@ -22,6 +22,11 @@ loader_version_range=[47,)
 # The default set of supported mapping channels are ["official", "snapshot", "snapshot_nodoc", "stable", "stable_nodoc"].
 # Additional mapping channels can be registered through the "channelProviders" extension in a Gradle plugin.
 #
+irons_spells_version=1.20.1-3.4.0.11
+caelus_version=3.1.0+1.20
+curios_version=5.4.7+1.20.1
+geckolib_version=1.20.1:4.7.1.1
+player_animator_version=1.0.2-rc1+1.20
 # | Channel   | Version              |                                                                                |
 # |-----------|----------------------|--------------------------------------------------------------------------------|
 # | official  | MCVersion            | Official field/method names from Mojang mapping files                          |
