--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
-org.gradle.jvmargs=-Xmx3G
+org.gradle.jvmargs=-Xmx1G
 org.gradle.daemon=true
 org.gradle.parallel=true
 org.gradle.caching=true
@@ -18,17 +18,13 @@ minecraft_version=1.21.1
 # as they do not follow standard versioning conventions.
 minecraft_version_range=[1.21.1]
 # The Neo version must agree with the Minecraft version to get a valid artifact
-neo_version=21.1.214
+neo_version=21.1.150
+# The Neo version range can use any version of Neo as bounds
+neo_version_range=[21.1.150,)
 # The loader version range can only use the major version of FML as bounds
 loader_version_range=[1,)
 
 ## Mod Properties
-
-irons_spells_version=1.21.1-3.14.6
-caelus_version=7.0.1+1.21.1
-curios_version=9.5.1+1.21.1
-geckolib_version=4.8.2
-player_animator_version=2.0.1+1.21.1
 
 # The unique mod identifier for the mod. Must be lowercase in English locale. Must fit the regex [a-z][a-z0-9_]{1,63}
 # Must match the String constant located in the main mod class annotated with @Mod.
@@ -36,7 +32,7 @@ mod_id=ascend
 # The human-readable display name for the mod.
 mod_name=ascend attributes
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
-mod_license=All Rights Reserved
+mod_license=MIT
 # The mod version. See https://semver.org/
 mod_version=1.0.0
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
@@ -44,6 +40,12 @@ mod_version=1.0.0
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
 mod_group_id=net.fretux.ascend
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
-mod_authors=old0men
+mod_authors=Fretux, old0men, Kris_HD1337
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 mod_description=Increase your powers by training your skills (Very realistic). for neoforge 21.1
+
+irons_spells_version=1.21.1-3.14.6
+caelus_version=7.0.1+1.21.1
+curios_version=9.5.1+1.21.1
+geckolib_version=4.8.2
+player_animator_version=2.0.1+1.21.1
